--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 README
 
-*details about replication servers at the bottom of the readme
+This project was built for a parallel and distruvuted systems course assignemtn at NYU.  It is a replicated and multithreaded web application written in Go.  This readme explains how to run the code, how the servers communicate with eachother, how the data for the application is stored, how replication is implimented, data recovery from server crashes, as well as how data races are handled.
 
 To run the backend server, you must first install gouuid:
 go get github.com/nu7hatch/gouuid
